--- a/documentation/documents/advanced/customizing_linq/index.html
+++ b/documentation/documents/advanced/customizing_linq/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.10.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -117,7 +117,7 @@ part of a Postgresql &quot;where&quot; clause. The custom Linq parser for <code>
 
 			      	<hr />
 
-			      	<nav>
+			      	<nav class="related-links">
 				        <span>
 				        	<strong>Previous: </strong><a href="/marten/documentation/documents/advanced/existing_transactions">Enlisting in Existing Transactions</a>
 
