--- a/documentation/documents/advanced/soft_deletes/index.html
+++ b/documentation/documents/advanced/soft_deletes/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.10.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -126,7 +126,7 @@ and the counterpart <code>DeletedSince(DateTimeOffset)</code> as show below:</p>
 
 			      	<hr />
 
-			      	<nav>
+			      	<nav class="related-links">
 				        <span>
 				        	<strong>Previous: </strong><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a>
 
