--- a/documentation/events/schema/index.html
+++ b/documentation/events/schema/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.8.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.10.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -109,8 +109,7 @@ column exists so that Marten can be effectively used without the underlying JSON
 <li><code>tenant_id</code> - Identifies the tenancy of the event</li>
 <li><code>mt_dotnet_type</code> - The full name of the underlying event type, including assembly name, e.g. &quot;Marten.Testing.Events.IssueResolved, Marten.Testing&quot;</li>
 </ul>
-<p>The &quot;Async Daemon&quot; projection support keys off of the sequential id, but we retained the Guid id field for backward compatibility
-and to retain a potential way to uniquely identify events across databases.</p>
+<p>The &quot;Async Daemon&quot; projection supports keys off of the sequential id, but we retained the Guid id field for backward compatibility and to retain a potential way to uniquely identify events across databases.</p>
 <p>In addition, there are a couple other metadata tables you'll see in your schema:</p>
 <ul>
 <li><code>mt_streams</code> - Metadata about each event stream</li>
@@ -122,17 +121,15 @@ and to retain a potential way to uniquely identify events across databases.</p>
 <li><code>mt_mark_event_progression</code> - Updates the <code>mt_event_progression</code> table</li>
 </ul>
 <h2 id="event-metadata-in-code">Event Metadata in Code</h2>
-<p>Hopefully, it's relatively clear how the fields in <code>mt_events</code> maps to the <code>IEvent</code> interface in Marten:</p>
+<p>Hopefully, it's relatively clear how the fields in <code>mt_events</code> map to the <code>IEvent</code> interface in Marten:</p>
 <pre><code class="language-csharp">&#xA;public Guid StreamId { get; set; }&#xA;&#xA;public string StreamKey { get; set; }&#xA;&#xA;public Guid Id { get; set; }&#xA;&#xA;public int Version { get; set; }&#xA;&#xA;public long Sequence { get; set; }&#xA;&#xA;public T Data { get; set; }&#xA;&#xA;public DateTimeOffset Timestamp { get; set; }&#xA;&#xA;public string TenantId { get; set; }&#xA;</code></pre>
-<p>The full event data is available on <code>EventStream</code> and <code>IEvent</code> objects immediately after committing a transaction that involves
-event capture. See <a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a> for more information on capturing event data in the instrumentation
-hooks.</p>
+<p>The full event data is available on <code>EventStream</code> and <code>IEvent</code> objects immediately after committing a transaction that involves event capture. See <a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a> for more information on capturing event data in the instrumentation hooks.</p>
 
 			      	</div>
 
 			      	<hr />
 
-			      	<nav>
+			      	<nav class="related-links">
 				        <span>
 				        	<strong>Previous: </strong><a href="/marten/documentation/events">Marten as Event Store</a>
 
